sidebar overflow error resolved

--- a/src/sass/components/sidebar.scss
+++ b/src/sass/components/sidebar.scss
@@ -23,7 +23,7 @@
     display: grid;
     justify-items: center;
     align-content: start;
-    width: 258px;
+    width: 100%;
     // padding-top: 10px;
     height: 65vh;
     font-size: 20px;
