--- a/src/sass/pages/admin/form.scss
+++ b/src/sass/pages/admin/form.scss
@@ -31,6 +31,12 @@
       align-items: center;
     }
 
+    &--preview {
+      height: auto;
+      width: 100%;
+      border-radius: 10px;
+    }
+
     &--padding {
       display: grid;
       gap: 20px;
@@ -75,7 +81,7 @@
       &-1 {
         height: 45px;
         // max-width: 450px;
-        width: 100%;
+        width: 100% !important;
         min-height: 45px;
         border: 2px solid $color-primary-light-1;
         padding: 0px 10px;
@@ -93,6 +99,8 @@
 
         &:hover {
           transform: translateY(-5px) scale(1.1);
+          // box-shadow: 0px 5px 10px gray;
+          // border-radius: 5px;
         }
       }
 
@@ -125,6 +133,12 @@
         cursor: pointer;
         font-family: myFont;
         font-size: 18px;
+        transition: all 0.2s;
+
+        &:hover {
+          transform: translateY(-5px) scale(1.1);
+          box-shadow: 0px 5px 10px gray;
+        }
 
         &-close {
           background-color: white !important;
